[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Luminiscental <luminiscental01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
reqwest = { version = "0.11.7", features = [ "blocking" ] }
paste = "1.0.6"
priority-queue = "1.2.1"
